<resources>
    <string name="app_name">12 GOR PATIDAR YUVA CLUB</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="karobari_samiti">કારોબારી સમિતિ</string>
    <string name="samajik_yojana">સામાજિક સુરક્ષા યોજના </string>
    <string name="sabhasad_mahiti">સભાસદની માહિતી</string>
    <string name="samaj_info">સમાજ વિશે માહિતી</string>

    <string name="trust_shree">ટ્રસ્ટ્રીશ્રી</string>
    <string name="hoddedar">હોદ્દેદારશ્રી  </string>
    <string name="karobari"> કારોબારી સભ્ય શ્રી</string>
    <string name="pratinidhi">પ્રતિનિધિશ્રી </string>

    <string name="mrutak">મૃતક સભાસદની યાદી</string>
    <string name="bride">અપરણીત યુવક-યુવતીની માહિતી</string>
    <string name="business">વ્યવસાય અંગે માહિતી</string>


    <!--<string name="member_reg">Add Family\nMember</string>-->
    <!--<string name="member_info">Member\nInformation</string>-->
    <!--<string name="download_form">Download\nForm</string>-->
    <!--<string name="social_yojana">Social\nSecurity\nScheme</string>-->
    <!--<string name="Send_msg">Send Message</string>-->
    <!--<string name="Happy_birthday">Happy\nBirthDay</string>-->
    <!--<string name="news">News</string>-->


    <string name="arji_patrak">Application Form</string>
    <string name="sarnama_ferfar">Changes in Address Form</string>
    <string name="varas_ferfar">Changes in Nominee Form</string>
    <string name="mrutyu_sahay">Death Claim Form</string>
    <string name="Abhinandan">Greetings Form</string>
    <string name="samajik_surksha">Social security Form</string>
    <string name="professional_dir">Professional Directory Form</string>
    <string name="yuvak_yuvti">Marriage Form</string>

    <!--<string name="death_info">Death\nMember Info</string>-->
    <!--<string name="yuvati_info">Marriage\n Info</string>-->
    <!--<string name="professional_info">Professional\n Info</string>-->
    <string name="your_member">Your Member</string>
    <string name="apply_for_ssy">Apply for ssy</string>
    <string name="pay_premium">Pay Premium</string>
    <string name="update_challan">Update Challan</string>

    <string-array name="search_member">
        <item>નામ</item>
        <item>વતન</item>
    </string-array>

    <string-array name="sex">
        <item>All</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="age">
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>

    </string-array>
    <string name="title_activity_about_us">AboutUsActivity</string>

    <string name="about_us">

        CONTACT US FOR NEXT GENERATION TECHNOLOGY SOLUTION.\n\n
        • Mobile Application Development\n
        • Software Development\n
        • Website Development\n
        • SEO and Online Branding\n
        • UI/Flex Design\n
        • Bulk SMS and EMAIL Solution           Provider
</string>
    <string name="title_activity_your_collection">YourCollectionActivity</string>

    <string name="contact_us">Sudhirkumar J. Patel, CEO\n
     Codefuel Technology Pvt. Ltd\n
     Cell 09427745635\n
     info@codefuelindia.com.\n
     www.codefuelindia.com\n
</string>


    <string-array name="sprelation">

        <item>પત્ની</item>
        <item>પતિ</item>
        <item>પુત્ર</item>
        <item>પુત્રી</item>
        <item>પુત્રવધુ</item>
        <item>પિતા</item>
        <item>માતા</item>
        <item>ભાઈ</item>
        <item>બહેન</item>
        <item>પૌત્ર</item>
        <item>પૌત્રી</item>
        <item>ભાભી</item>
        <item>કાકા</item>
        <item>કાકી</item>

    </string-array>
    <!--<string name="title_activity_family_member_list">FamilyMemberList</string>-->
    <!--<string name="title_activity_group_vise_family">GroupViseFamily</string>-->
    <!--<string name="title_activity_add_business">AddBusinessActivity</string>-->
    <!--<string name="directory">Directory</string>-->
    <!--<string name="family_member">Family Member</string>-->
    <!--<string name="request">Request</string>-->
    <!--<string name="add_business">Add Business</string>-->


    <!--       Gujarati             -->

    <string name="title_activity_family_member_list">FamilyMemberList</string>
    <string name="title_activity_group_vise_family">GroupViseFamily</string>
    <string name="title_activity_add_business">AddBusinessActivity</string>
    <string name="directory">પરિચય પુસ્તિકા</string>
    <string name="family_member">મારો પરીવાર</string>
    <string name="request">પ્રીમીયમ મેમ્બર\n થવા વિનંતી</string>
    <string name="add_business">ધંધાકીય માહિતી \nઉમેરો</string>


    <string name="member_reg">સભ્ય ઉમેરો</string>
    <string name="member_info">સભ્યોની માહિતી</string>
    <string name="download_form">ડાઉનલોડ ફોર્મ</string>
    <string name="social_yojana">Social\nSecurity\nScheme</string>
    <string name="Send_msg">મેસેજ કરો</string>
    <string name="Happy_birthday">જન્મદિવસ</string>
    <string name="news">સમાચાર</string>
    <string name="village_info">ગામોની માહિતી</string>
    <string name="yava_club">યુવા ક્લબ</string>
    <string name="women_club">મહિલા ક્લબ</string>
    <string name="karobari_samaj">જનરલ કારોબારી</string>
    <string name="sharafi">શરાફી મંડળી</string>
    <string name="kedavani">કેળવણી મંડળ</string>
    <string name="title_activity_village_detail">VillageDetailActivity</string>

    <string name="death_info">મરણોત્તર માહિતી</string>
    <string name="yuvati_info">લગ્ન વિષયક માહિતી</string>
    <string name="professional_info">ધંધાકીય માહિતી</string>

    <string-array name="blood_grp">
        <item>-----</item>
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>


    </string-array>

    <string-array name="gor_list">
        <item>૧૨ ગોળ કડવા પાટીદાર સમાજ </item>
        <item>અન્ય </item>
    </string-array>

    <string-array name="shakha">

        <item>કાંઠીયા</item>
        <item> આગલોરીયા  </item>
        <item> કંથારીયા</item>
        <item> સાપરિયા</item>
        <item> દાવડા</item>
        <item> કાલરીયા</item>
        <item> છોગારા</item>
        <item> સાકરિયા</item>
        <item> સામળાવત</item>
        <item> કુવારા</item>
        <item> કપાસિયા</item>
        <item> ટાલરા</item>
        <item> કાંડિયા</item>
        <item> સબુપરા</item>
        <item> માંલ્લાવત</item>
        <item> ચિકના</item>
        <item> રસામાંના</item>
        <item> માઢીયા</item>
        <item> કશ્યપ</item>
        <item>કડોલી</item>
        <item>ટાહી</item>
        <item>પટેલવાળા</item>
        <item> ઢુઢા</item>
        <item>ગામી</item>
        <item>ધામી</item>
        <item>વસાવત</item>
        <item>પહાડીયા</item>
        <item>ખરહુ</item>
        <item>હિજલિયા</item>
        <item>મોવાડિયા</item>
        <item>જામળિયા</item>
        <item>મતીરી</item>
        <item>કુંડોલિયા</item>
        <item>કૌહાવત</item>
        <item>જેઠાવત</item>
        <item>કુલ્લા</item>
        <item> કુદેરીયા</item>
        <item>દાંદુ </item>
        <item> અન્ય</item>


    </string-array>
    <string name="title_activity_pay_init">PayInitActivity</string>


    <string-array name="size_arr">
        <item>Small (S)</item>
        <item>Medium (M)</item>
        <item>Large (L)</item>
        <item>Extra large (XL)</item>

    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_team">MyTeamActivity</string>

</resources>
