<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_marginBottom="10dp"
                android:ellipsize="marquee"
                android:layout_gravity="center_vertical"
                android:id="@+id/horizontalView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:fillViewport="true">

                <LinearLayout
                    android:background="#EF6C00"
                    android:layout_gravity="top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:orientation="horizontal">

                    <TextView
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:textStyle="bold"
                        android:drawableTop="@drawable/home1"
                        android:layout_margin="10dp"
                        android:id="@+id/tvVillageInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/village_info" />

                    <TextView
                        android:id="@+id/tvKarobariInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:drawableTop="@drawable/karobari"
                        android:text="@string/karobari_samaj"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvWomenClub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:drawableTop="@drawable/mahilaclub"
                        android:text="@string/women_club"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvYuvaClub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:drawableTop="@drawable/yuvaclub"
                        android:text="@string/yava_club"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvSharafiMandli"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:drawableTop="@drawable/sharafi"
                        android:text="@string/sharafi"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvUtkarsMandli"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:drawableTop="@drawable/kelavni"
                        android:text="@string/kedavani"
                        android:textStyle="bold" />


                </LinearLayout>


            </HorizontalScrollView>

            <TextView
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:id="@+id/llTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <android.support.v7.widget.CardView
                    android:id="@+id/cvNews"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:cardElevation="3dp"

                    app:cardUseCompatPadding="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/newspaper"
                        android:gravity="center"
                        android:text="@string/news"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <android.support.v7.widget.CardView
                    android:id="@+id/cvDownloadForm"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/downloadfile"
                        android:gravity="center"
                        android:text="@string/download_form"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cvSendMsg"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/email"
                        android:gravity="center"
                        android:text="@string/Send_msg"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cvAddFamilyMember"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/addmember"
                        android:gravity="center"
                        android:text="@string/member_reg"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">


                <android.support.v7.widget.CardView

                    android:id="@+id/cvAddBusinessdetail"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/info"
                        android:gravity="center"
                        android:text="@string/add_business"
                        android:textSize="16sp" />

                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/cvKhetiMahiti"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tvKhetiMahiti"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/farmer"
                        android:gravity="center"
                        android:text="ખેતી વિષયક\n માહિતી "
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView

                    android:id="@+id/cvSarkariYojana"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tvSarkariYojana"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/government"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="સરકારી યોજનાની\n માહિતી
"
                        android:textSize="14sp" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView

                    android:id="@+id/cvNokariMahiti"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tvNokariMahiti"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/job"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="નોકરી વિષયક\n માહિતી "
                        android:textSize="14sp" />

                </android.support.v7.widget.CardView>



            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp" />


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
