<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bargor.samaj.view.DirectoryDashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="Directory" />


        </android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:id="@+id/llFirstrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">


            <android.support.v7.widget.CardView
                android:id="@+id/cvYuvatiInfo"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/info"
                    android:gravity="center"
                    android:text="@string/yuvati_info" />

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/cvProfessionalInfo"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/ic_send_deep_purple_800_48dp"
                    android:gravity="center"
                    android:text="@string/professional_info" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvDeathMember"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/addmember"
                    android:gravity="center"
                    android:text="@string/death_info" />

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </LinearLayout>

</ScrollView>
